--- a/ged_gphy/nbproject/project.properties
+++ b/ged_gphy/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.jar=lib\\commons-fileupload-1.3.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,7 +45,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.hibernate-support.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.commons-fileupload-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
